[tool.poetry]
name = "grocer"
version = "0.1.0"
description = "Flat-file JSON store designed for concurrent write access"
authors = ["Barry Moore <moore0557@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
