[tool.poetry]
name = "grocer"
version = "0.1.0"
description = "Flat-file JSON store designed for concurrent write access"
authors = ["Barry Moore <moore0557@gmail.com>"]
license = "MIT"
packages = [
    { include = "grocer" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pre-commit = "^1.14"
black = "=18.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
